// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Seguidor /> Materia renderea correctamente. 1`] = `
<div
  className="Subject Disabled"
/>
`;

exports[`<Seguidor /> Materia renderea correctamente. 2`] = `
<div
  className="Subject"
/>
`;

exports[`<Seguidor /> Render inicial correcto. 1`] = `
<div>
  <div>
    <div>
      <div
        className="SeguidorTitle"
      >
        <h1
          className="SeguidorHeading"
        >
          Materias
        </h1>
      </div>
      <div
        className="ViewChooser"
      />
    </div>
  </div>
  <div />
</div>
`;

exports[`<Seguidor /> Vista de carousel renderea correctamente. 1`] = `<div />`;
